// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`columnParallel 1`] = `
{
  "annotation": {},
  "chartType": "columnParallel",
  "config": {
    "columnParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "stackCornerRadius": [
        4,
        4,
        4,
        4,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "columnParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "stackCornerRadius": [
          4,
          4,
          4,
          4,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jan-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jan-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "profit": 10000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Jan-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "discount": 0.5,
      "month": "Jan",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Feb-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Feb-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 20000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "profit": 20000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Feb-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Feb",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Mar-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Mar-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "profit": 30000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Mar-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "discount": 0.4,
      "month": "Mar",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Apr-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Apr-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "profit": 40000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Apr-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Apr",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "May-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "May-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "profit": 50000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "May-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.05,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "discount": 0.05,
      "month": "May",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jun-Sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jun-Profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 60000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "profit": 60000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Jun-Discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "discount": 0.3,
      "month": "Jun",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jan-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jan-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "profit": 10000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Jan-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "discount": 0.5,
      "month": "Jan",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Feb-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Feb-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 20000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "profit": 20000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Feb-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Feb",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Mar-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Mar-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "profit": 30000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Mar-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "discount": 0.4,
      "month": "Mar",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Apr-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Apr-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "profit": 40000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Apr-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Apr",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "May-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "May-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "profit": 50000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "May-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.05,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "discount": 0.05,
      "month": "May",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "Jun-Sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "Jun-Profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 60000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "profit": 60000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "Jun-Discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "discount": 0.3,
      "month": "Jun",
      "year": "2020",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "discount": "Discount",
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "columnParallel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "Discount-discount": "Discount",
          "Profit-profit": "Profit",
          "Sales-sales": "Sales",
        },
        "colorItems": [
          "Sales-sales",
          "Profit-profit",
          "Discount-discount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
      "month",
    ],
    "x": [
      "year",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "Sales",
      "autoFormat": true,
      "id": "sales",
    },
    {
      "alias": "Profit",
      "autoFormat": true,
      "id": "profit",
    },
    {
      "alias": "Discount",
      "autoFormat": true,
      "id": "discount",
    },
  ],
}
`;

exports[`columnParallel 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "lineWidth": 1,
    },
  },
  "color": {
    "domain": [
      "Sales-sales",
      "Profit-profit",
      "Discount-discount",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "columnParallel",
    "values": [
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jan-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jan-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 10000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Jan-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Feb-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Feb-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 20000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Feb-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Mar-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Mar-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 30000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Mar-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Apr-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Apr-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 40000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Apr-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "May-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "May-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 50000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "May-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jun-Sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jun-Profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 60000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Jun-Discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jan-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jan-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 10000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Jan-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Feb-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Feb-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 20000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Feb-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Mar-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Mar-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 30000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Mar-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Apr-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Apr-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 40000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Apr-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "May-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "May-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 50000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "May-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "Jun-Sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "Jun-Profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 60000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "Jun-Discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "year": "2020",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [
    4,
    4,
    4,
    4,
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": [
    "__Dim_X__",
    "__Dim_Detail__",
  ],
  "yField": "__MeaValue__",
}
`;
